--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             delimiter: ",",	// auto-detect
             header: true,
             complete: (results) => {
-                const coordinates = getCoordinates(results.data, 1);
+                const locs = filterRows(results.data, 1, 0);
+                const coordinates = getCoordinates(locs, 2);
+                console.log(coordinates);
                 const colorCode = {
                     1: 'red',
                     2: 'blue',
