--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 const coordinates = getCoordinates(locs, 2);
                 console.log(coordinates);
                 const colorCode = {
+                    0: 'violet',
                     1: 'red',
                     2: 'blue',
                     3: 'green',
@@ -41,20 +42,29 @@
                     6: 'brown',
                     7: 'pink',
                 }
-                initializeMap(coordinates, colorCode);
+                initializeMap(coordinates);
             },
             download: true,
         });
 
+        /**
+         * Initializes a map with circle markers placed at the given coordinates. 
+         * @param {number[]} coordinates An array of the form [latitude, longitude, communityLevel].
+         * @param {Object<number, string>} [colorCode] A mapping from clutster to color. Random colors (24-bit) are assigned to all clusters with no color mapping.
+         */
         function initializeMap(coordinates, colorCode) {
-            console.log(coordinates[0]);
             const mymap = L.map('mapid').setView(coordinates[0], 1); // center map on first coordinate
-            for (const coordinate of coordinates) {
-                const marker = L.circle([coordinate[0], coordinate[1]], {
-                    color: colorCode && colorCode[coordinate[2]] ? colorCode[coordinate[2]] : 'black'
-                }).addTo(mymap); // add circle marker to map
-
+            if (!colorCode) {
+                colorCode = {}
             }
+            for (const coordinate of coordinates) {
+                if (!colorCode[coordinate[2]])
+                    colorCode[coordinate[2]] = '#' + Math.floor(Math.random() * ((2 ** 24) - 1)).toString(16); // Adapted from https://stackoverflow.com/questions/1484506/random-color-generator#comment39432667_1484506
+                const marker = L.circle([coordinate[0], coordinate[1]], {
+                    color: colorCode[coordinate[2]]
+                }).addTo(mymap); // add circle marker to map
+            }
+
             L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
                 attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
                 maxZoom: 18,
