--- a/index.html
+++ b/index.html
@@ -24,47 +24,37 @@
     <script src="parser.js"></script>
     <script src="index.js"></script>
     <script>
-        // https://stackoverflow.com/a/49774653/4348037
-        Papa.parse("communities_-1__with_distance_multi-level_geonames_cities_7.csv", {
-            delimiter: ",",	// auto-detect
-            header: true,
-            complete: (results) => {
-                const locs = filterRows(results.data, 1, 0);
-                const coordinates = getCoordinates(locs, 2);
-                console.log(coordinates);
-                const colorCode = {
-                    0: 'violet',
-                    1: 'red',
-                    2: 'blue',
-                    3: 'green',
-                    4: 'orange',
-                    5: 'yellow',
-                    6: 'brown',
-                    7: 'pink',
+        const request = new XMLHttpRequest();
+        request.open("GET", "data.json");
+        request.onload = () => {
+            let data = JSON.parse(request.responseText);
+            clusters = data['clusters']
+            boundaries = data['polygons']
+            console.log(data)
+            const mymap = L.map('mapid').setView(clusters[0][0], 1); // center map on first coordinate
+            initializeMap(mymap)
+
+            colorCode = {}
+            for (const [index, coordinates] of clusters.entries()) {
+                if (!colorCode[index])
+                    colorCode[index] = '#' + Math.floor(Math.random() * ((2 ** 24) - 1)).toString(16); // Adapted from https://stackoverflow.com/questions/1484506/random-color-generator#comment39432667_1484506
+                const polygon = L.polygon(boundaries[index], { color: colorCode[index] }).addTo(mymap);
+                for (const coordinate of coordinates) {
+                    const marker = L.circle([coordinate[0], coordinate[1]], {
+                        color: colorCode[index]
+                    }).addTo(mymap); // add circle marker to map
                 }
-                initializeMap(coordinates);
-            },
-            download: true,
-        });
+            }
+        }
+        request.send(null);
+
 
         /**
          * Initializes a map with circle markers placed at the given coordinates. 
          * @param {number[]} coordinates An array of the form [latitude, longitude, communityLevel].
          * @param {Object<number, string>} [colorCode] A mapping from clutster to color. Random colors (24-bit) are assigned to all clusters with no color mapping.
          */
-        function initializeMap(coordinates, colorCode) {
-            const mymap = L.map('mapid').setView(coordinates[0], 1); // center map on first coordinate
-            if (!colorCode) {
-                colorCode = {}
-            }
-            for (const coordinate of coordinates) {
-                if (!colorCode[coordinate[2]])
-                    colorCode[coordinate[2]] = '#' + Math.floor(Math.random() * ((2 ** 24) - 1)).toString(16); // Adapted from https://stackoverflow.com/questions/1484506/random-color-generator#comment39432667_1484506
-                const marker = L.circle([coordinate[0], coordinate[1]], {
-                    color: colorCode[coordinate[2]]
-                }).addTo(mymap); // add circle marker to map
-            }
-
+        function initializeMap(map) {
             L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
                 attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
                 maxZoom: 18,
@@ -72,7 +62,7 @@
                 tileSize: 512,
                 zoomOffset: -1,
                 accessToken: 'pk.eyJ1Ijoib3NoYXJha2kiLCJhIjoiY2tlZTFtaGxkMHhmNzMxbXQ4Z2x2YXN2ZyJ9.KCrCutRDObY0pQMPUyMcAA'
-            }).addTo(mymap);
+            }).addTo(map);
         }
     </script>
 </body>
