:loud_sound: Update missing region geometry warning

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         }
                     }
                     else
-                        console.warn("No region geometries present in region file!")
+                        console.warn(`Region ${regionID} has no geometry data region file!`)
                 }
 
                 if (drawNodes) {
